# ISDC_sourceCode

./: .gitignore  README.md  requirements.txt
compressor/: ISDC_compression.py
cuda/endToEnd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  decompress.cu  decompress_1024_1024.cu  decompress_1024_4096.cu  decompress_2048_2048.cu  decompress_2048_8192.cu  decompress_3072_768.cu  decompress_4096_1024.cu  decompress_768_3072.cu  decompress_8192_2048.cu
cuda/endToEnd/128_256/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/128_256/sort/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/16_32/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/16_32/sort/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/32_64/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/32_64/sort/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/4_8/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/4_8/all/: decompress_768_768.cu
cuda/endToEnd/4_8/sort/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/64_128/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/64_128/sort/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/8_16/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
cuda/endToEnd/8_16/sort/: decompress_3072_768.cu  decompress_768_3072.cu  decompress_768_768.cu
examples/: README.md  callDecompressKernel.py  datautils.py  isdcLinear.py  modelutils.py  opt_bfloat16.py  opt_bfloat16_isdc.py  opt_bfloat16_isdc_CPU.py  originalCPULinear.py
examples/facebook__opt-1.3b/: README.md
examples/opt125m_isdc_compressed_weight_4_8/: model_decoder_layers_0_fc1.json  model_decoder_layers_0_fc1_data_width_str.txt  model_decoder_layers_0_fc1_startAddr.json  model_decoder_layers_0_fc2.json  model_decoder_layers_0_fc2_data_width_str.txt  model_decoder_layers_0_fc2_startAddr.json  model_decoder_layers_0_self_attn_k_proj.json  model_decoder_layers_0_self_attn_k_proj_data_width_str.txt  model_decoder_layers_0_self_attn_k_proj_index_data_str.json  model_decoder_layers_0_self_attn_k_proj_startAddr.json  model_decoder_layers_0_self_attn_k_proj_weight_data_str.txt  model_decoder_layers_0_self_attn_out_proj.json  model_decoder_layers_0_self_attn_out_proj_data_width_str.txt  model_decoder_layers_0_self_attn_out_proj_index_data_str.json  model_decoder_layers_0_self_attn_out_proj_startAddr.json  model_decoder_layers_0_self_attn_out_proj_weight_data_str.txt  model_decoder_layers_0_self_attn_q_proj.json  model_decoder_layers_0_self_attn_q_proj_data_width_str.txt  model_decoder_layers_0_self_attn_q_proj_index_data_str.json  model_decoder_layers_0_self_attn_q_proj_startAddr.json  model_decoder_layers_0_self_attn_q_proj_weight_data_str.txt  model_decoder_layers_0_self_attn_v_proj.json  model_decoder_layers_0_self_attn_v_proj_data_width_str.txt  (+288 more)
(+2 files in other folders)
